# SH-Vulkan

./: CMakeLists.txt  CMakeSettings.json  LICENSE  main.cpp
Include/: ASystemInclude.h  DQueueFamilyIndices.h  DVkQueueFamilyIndices.h  DVkSwapChainSupportDetails.h  ESuccess.h  FGlobalType.h  FHelperFileIO.h  FHelperVulkan.h  FMacro.h  IHelperSingleton.h  MVulkanRenderer.h  VulkanSandbox.h
Include/System/: AAssertion.h  AUndef.h  FIdiom.h  IHelperMoveable.h  MTimerChecker.h
Include/Temp/: DDefaultVertex.h  U0UniformBufferObject.h
Include/Type/: DMatrix4.h  DVector2.h  DVector3.h  DVector4.h
Resource/: frag.spv  shader.frag  shader.vert  vert.spv
Source/: CMakeLists.txt  FHelperFileIO.cpp  MVulkanRenderer.cpp
Source/Temp/: CMakeLists.txt  DDefaultVertex.cpp
Source/Type/: CMakeLists.txt  DMatrix4.cpp
