#
# MIT License
# Copyright (c) 2018-2019 Jongmin Yun
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#
cmake_minimum_required (VERSION 3.8)

# Include sub-projects.
add_subdirectory (Temp)
add_subdirectory (Type)

file(GLOB NEU_SOURCE_FILES *.cpp)
add_library(Source STATIC ${NEU_SOURCE_FILES})
target_link_libraries(Source Source_Temp)
target_link_libraries(Source Source_Type)